--- a/_includes/assets/css/sass/_mobile-menu.scss
+++ b/_includes/assets/css/sass/_mobile-menu.scss
@@ -26,6 +26,7 @@
   padding: 28px 20px;
   position: relative;
   user-select: none;
+  z-index: 2;
 }
 
 .menu-icon .navicon {
